--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -237,7 +237,7 @@ else
             IsVisible="@_viewSharedProjectComponent"
             IsVisibleChanged="@HandleViewSharedProjectComponent"/>
     
-    <SpecificTodoItemComponent TodoItem="@SpecificTodoItem" Project="@CurrentProject" IsVisible="@ViewTask" IsVisibleChanged="@HandleViewTaskChanged" OnTodoItemDeleted="@HandleTodoItemDeleted"/>
+    <SpecificTodoItemComponent TodoItem="@SpecificTodoItem" IsViewer="@IsViewer" IsVisible="@ViewTask" IsVisibleChanged="@HandleViewTaskChanged" OnTodoItemDeleted="@HandleTodoItemDeleted"/>
 }
 
 @code {
