--- a/Todo.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/Todo.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -84,7 +84,11 @@ else
         // Get authenticator information from the UserService
         var twoFactorInfo = await UserService.GetTwoFactorInfoAsync();
         var user = await UserService.GetUserInfoAsync();
-
+        if (user == null)
+        {
+            return;
+        }
+        
         if (twoFactorInfo is not null)
         {
             sharedKey = FormatKey(twoFactorInfo.SharedKey);
@@ -134,93 +138,6 @@ else
         return result.ToString().ToLowerInvariant();
     }
     
-    
-
-    /*protected override async Task OnInitializedAsync()
-    {
-        var twoFactorInfo = await UserService.GetTwoFactorInfoAsync();
-
-        if (twoFactorInfo is not null)
-        {
-            sharedKey = twoFactorInfo.SharedKey;
-            authenticatorUri = twoFactorInfo.AuthenticatorUri;
-        }
-    }
-
-    private async Task OnValidSubmitAsync()
-    {
-        // Strip spaces and hyphens
-        var verificationCode = Input.Code.Replace(" ", string.Empty).Replace("-", string.Empty);
-
-        var is2faTokenValid = await UserManager.VerifyTwoFactorTokenAsync(
-            user, UserManager.Options.Tokens.AuthenticatorTokenProvider, verificationCode);
-
-        if (!is2faTokenValid)
-        {
-            message = "Error: Verification code is invalid.";
-            return;
-        }
-
-        await UserManager.SetTwoFactorEnabledAsync(user, true);
-        var userId = await UserManager.GetUserIdAsync(user);
-        Logger.LogInformation("User with ID '{UserId}' has enabled 2FA with an authenticator app.", userId);
-
-        message = "Your authenticator app has been verified.";
-
-        if (await UserManager.CountRecoveryCodesAsync(user) == 0)
-        {
-            recoveryCodes = await UserManager.GenerateNewTwoFactorRecoveryCodesAsync(user, 10);
-        }
-        else
-        {
-            RedirectManager.RedirectToWithStatus("Account/Manage/TwoFactorAuthentication", message, HttpContext);
-        }
-    }
-
-    private async ValueTask LoadSharedKeyAndQrCodeUriAsync(ApplicationUser user)
-    {
-        // Load the authenticator key & QR code URI to display on the form
-        var unformattedKey = await UserManager.GetAuthenticatorKeyAsync(user);
-        if (string.IsNullOrEmpty(unformattedKey))
-        {
-            await UserManager.ResetAuthenticatorKeyAsync(user);
-            unformattedKey = await UserManager.GetAuthenticatorKeyAsync(user);
-        }
-
-        sharedKey = FormatKey(unformattedKey!);
-
-        var email = await UserManager.GetEmailAsync(user);
-        authenticatorUri = GenerateQrCodeUri(email!, unformattedKey!);
-    }
-
-    private string FormatKey(string unformattedKey)
-    {
-        var result = new StringBuilder();
-        int currentPosition = 0;
-        while (currentPosition + 4 < unformattedKey.Length)
-        {
-            result.Append(unformattedKey.AsSpan(currentPosition, 4)).Append(' ');
-            currentPosition += 4;
-        }
-
-        if (currentPosition < unformattedKey.Length)
-        {
-            result.Append(unformattedKey.AsSpan(currentPosition));
-        }
-
-        return result.ToString().ToLowerInvariant();
-    }
-
-    private string GenerateQrCodeUri(string email, string unformattedKey)
-    {
-        return string.Format(
-            CultureInfo.InvariantCulture,
-            AuthenticatorUriFormat,
-            UrlEncoder.Encode("Microsoft.AspNetCore.Identity.UI"),
-            UrlEncoder.Encode(email),
-            unformattedKey);
-    }*/
-
     private sealed class InputModel
     {
         [Required]
