error-message css

--- a/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
+++ b/Todo.Web/Components/Pages/ShareProjectComponent.razor.css
@@ -93,6 +93,17 @@
     text-align: center;
 }
 
-.error-message{
-    color:red;
+.error-message {
+    display: flex;
+    position: fixed;
+    background-color:#0C2364;
+    bottom: 1.5%;
+    right: 1.5%;
+    width: 250px;
+    height: 150px;
+    color:white;
+    border-radius: 5%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
 }
