--- a/Todo.Web/Components/Pages/Home.razor.css
+++ b/Todo.Web/Components/Pages/Home.razor.css
@@ -53,8 +53,19 @@ a .project-name {
     background-color: #ece6e6;
 }
 
-.error-message{
-    color:red;
+.error-message {
+    display: flex;
+    position: fixed;
+    background-color:#0C2364;
+    bottom: 1.5%;
+    right: 1.5%;
+    width: 250px;
+    height: 150px;
+    color:white;
+    border-radius: 5%;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
 }
 
 .project-container {
