--- a/Todo.Web/Components/Pages/ProjectPage.razor.css
+++ b/Todo.Web/Components/Pages/ProjectPage.razor.css
@@ -37,7 +37,7 @@ h5 {
     border-radius: 4px;
     padding: 8px;
     z-index: 105;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     min-width: 200px;
 }
 
@@ -100,7 +100,7 @@ span {
     box-sizing: border-box;
     gap: 1%;
     padding: 20px;
-    width: 1200px;
+    width: 1400px;
     min-height: 500px;
     overflow-x: auto; /* Prevent horizontal scroll */
 }
@@ -110,7 +110,7 @@ span {
     background-color: #f5f5f5;
     border-radius: 8px;
     padding: 16px;
-    min-width: 300px;
+    min-width: 360px;
     min-height: 500px;
     max-height: 90%;
 
