Initial fix of logout bug. However, when logging in, an error occurs but still logs the user in

--- a/Todo.Web/Components/Layout/NavMenu.razor
+++ b/Todo.Web/Components/Layout/NavMenu.razor
@@ -1,6 +1,9 @@
-﻿@implements IDisposable
-
+﻿@using Todo.Web.Auth
+@implements IDisposable
+@inject IAuthService AuthService
 @inject NavigationManager NavigationManager
+@rendermode InteractiveServer
+
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -36,13 +39,9 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <form action="Account/Logout" method="post">
-                        <AntiforgeryToken/>
-                        <input type="hidden" name="ReturnUrl" value="@currentUrl"/>
-                        <button type="submit" class="nav-link">
-                            <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
-                        </button>
-                    </form>
+                    <NavLink class="nav-link" href="/Account/Logout">
+                        <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
+                    </NavLink>
                 </div>
             </Authorized>
             <NotAuthorized>
